@@ -200,7 +200,7 @@ public class ERXStringUtilities {
 
     /**
      * Fuzzy matching is useful for catching user entered typos. For example
-     * if a user is searching for a company named 'Aple' within your application
+     * if a user is search for a company named 'Aple' within your application
      * they aren't going to find it. Thus the idea of fuzzy matching, meaning you
      * can define a threshold of 'how close can they be' type of thing.
      *
@@ -226,23 +226,23 @@ public class ERXStringUtilities {
                                      ERXFuzzyMatchCleaner cleaner,
                                      NSArray sortOrderings ){
         String eoKey = "eo";
-        NSMutableArray<NSMutableDictionary<String, Object>> results = new NSMutableArray<NSMutableDictionary<String, Object>>();
+        NSMutableArray results = new NSMutableArray();
         EOFetchSpecification fs = new EOFetchSpecification( entityName, null, null );
         fs.setFetchesRawRows( true );
-        NSArray<String> pks = EOUtilities.entityNamed( ec, entityName ).primaryKeyAttributeNames();
-        NSMutableArray<String> keyPaths = new NSMutableArray<String>(pks);
+        NSArray pks = EOUtilities.entityNamed( ec, entityName ).primaryKeyAttributeNames();
+        NSMutableArray keyPaths = new NSMutableArray(pks);
         keyPaths.addObject( propertyKey );
         if( synonymsKey != null ) 
             keyPaths.addObject( synonymsKey );
         //we use only the strictly necessary keys.
         fs.setRawRowKeyPaths( keyPaths );
-        NSArray<NSDictionary<String, Object>> rawRows = ec.objectsWithFetchSpecification( fs );
+        NSArray rawRows = ec.objectsWithFetchSpecification( fs );
         if(name == null)
             name = "";
         name = name.toUpperCase();
         String cleanedName = cleaner.cleanStringForFuzzyMatching(name);
         for(Enumeration e = rawRows.objectEnumerator(); e.hasMoreElements(); ){
-            NSMutableDictionary<String, Object> dico = ((NSDictionary)e.nextElement()).mutableClone();
+            NSMutableDictionary dico = ((NSDictionary)e.nextElement()).mutableClone();
             Object value = dico.valueForKey(propertyKey);
             boolean trySynonyms = true;
             //First try to match with the name of the eo
@@ -254,7 +254,7 @@ public class ERXStringUtilities {
                     (distance(cleanedName, cleanedComparedString) <=
                      Math.min((double)cleanedName.length(), (double)cleanedComparedString.length())*adjustement)){
                     dico.setObjectForKey( new Double(distance(name, comparedString)), _DISTANCE );
-                    NSDictionary<String, Object> pkValues = new NSDictionary<String, Object>(dico.objectsForKeys(pks, NSKeyValueCoding.NullValue ), pks);
+                    NSDictionary pkValues = new NSDictionary( dico.objectsForKeys( pks, NSKeyValueCoding.NullValue ), pks );
                     dico.setObjectForKey( EOUtilities.faultWithPrimaryKey( ec, entityName, pkValues ), eoKey );
                     results.addObject( dico );
                     trySynonyms = false;
@@ -273,7 +273,7 @@ public class ERXStringUtilities {
                            (distance(cleanedName, comparedString) <=
                             Math.min((double)cleanedName.length(), (double)comparedString.length())*adjustement)){
                             dico.setObjectForKey( new Double(distance(name, comparedString)), _DISTANCE );
-                            NSDictionary<String, Object> pkValues = new NSDictionary<String, Object>(dico.objectsForKeys(pks, NSKeyValueCoding.NullValue ), pks);
+                            NSDictionary pkValues = new NSDictionary( dico.objectsForKeys( pks, NSKeyValueCoding.NullValue ), pks );
                             dico.setObjectForKey( EOUtilities.faultWithPrimaryKey( ec, entityName, pkValues ), eoKey );
                             results.addObject( dico );
                             break;
@@ -283,23 +283,16 @@ public class ERXStringUtilities {
             }
         }
         if( sortOrderings != null ) {
-            results = (NSMutableArray<NSMutableDictionary<String, Object>>) EOSortOrdering.sortedArrayUsingKeyOrderArray(results, sortOrderings);
+            results = (NSMutableArray)EOSortOrdering.sortedArrayUsingKeyOrderArray(results, sortOrderings);
         }
         return (NSArray) results.valueForKey( eoKey );        
     }
     
-    /**
-     * @param name
-     * @param entityName
-     * @param propertyKey
-     * @param synonymsKey
-     * @param ec
-     * @param cleaner
-     * @param comparisonString
-     * @return an array of objects that match in a fuzzy manner the name passed in.
-     * @deprecated use {@link #fuzzyMatch(String, String, String, String, EOEditingContext, ERXFuzzyMatchCleaner, NSArray)}
-     */
-    @Deprecated
+    /** @deprecated use 
+        <code>fuzzyMatch(String name, String entityName, String propertyKey,
+                         String synonymsKey, EOEditingContext ec,
+                         ERXFuzzyMatchCleaner cleaner, NSArray sortOrderings )</code>
+        instead*/
     public static NSArray fuzzyMatch(String name,
                                      String entityName,
                                      String propertyKey,
@@ -423,22 +416,6 @@ public class ERXStringUtilities {
     }
     
     /**
-     * Tests if a given string object can be parsed into
-     * an integer.
-     * @param s string to be parsed
-     * @return <code>true</code> if the string is not <code>null</code>
-     *      and can be parsed to an int
-     */
-    public static boolean stringIsParseableInteger(String s) {
-        try {
-            Integer.parseInt(s);
-            return true;
-        } catch (NumberFormatException e) {
-            return false;
-        }
-    }
-    
-    /**
      * Wrapper for {@link Integer#valueOf(String)} that catches
      * the NumberFormatException.
      * 
@@ -473,7 +450,7 @@ public class ERXStringUtilities {
     }
 
     /**
-     * Retrieves a given string for a given name, extension
+     * Retrives a given string for a given name, extension
      * and bundle.
      * @param name of the resource
      * @param extension of the resource, example: txt or rtf
@@ -550,23 +527,23 @@ public class ERXStringUtilities {
      * @return display name for the given key
      */
     public static String displayNameForKey(String key) {
-        StringBuilder finalString = null;
+        StringBuffer finalString = null;
         if (!stringIsNullOrEmpty(key) && !key.trim().equals("")) {
-            finalString = new StringBuilder();
+            finalString = new StringBuffer();
             String lastHop=key.indexOf(".") == -1 ? key : key.endsWith(".") ? "" : key.substring(key.lastIndexOf(".") + 1);
-            StringBuilder tempString = new StringBuilder();
+            StringBuffer tempString = new StringBuffer();
             char[] originalArray = lastHop.toCharArray();
             originalArray[0] = Character.toUpperCase(originalArray[0]);
             Character tempChar = null;
             Character nextChar = null;
             for(int i=0;i<(originalArray.length-1);i++){
-                tempChar = Character.valueOf(originalArray[i]);
-                nextChar = Character.valueOf(originalArray[i+1]);
+                tempChar = new Character(originalArray[i]);
+                nextChar = new Character(originalArray[i+1]);
                 if(Character.isUpperCase(originalArray[i]) &&
                    Character.isLowerCase(originalArray[i+1])) {
                     finalString.append(tempString.toString());
                     if (i>0) finalString.append(' ');
-                    tempString = new StringBuilder();
+                    tempString = new StringBuffer();
                 }
                 tempString.append(tempChar.toString());
             }
@@ -577,10 +554,10 @@ public class ERXStringUtilities {
     }
 
     /** 
-     * Locate the the first numeric character in the given string.
-     * 
+     * Locate the the first numeric character in the given string. 
      * @param str string to scan
-     * @return position in string or -1 if no numeric found 
+     *
+     * @return position in int. -1 for not found. 
      */ 
     public static int indexOfNumericInString(String str) {
         return indexOfNumericInString(str, 0);
@@ -588,11 +565,10 @@ public class ERXStringUtilities {
         
     /** 
      * Locate the the first numeric character 
-     * after <code>fromIndex</code> in the given string.
-     * 
+     * after <code>fromIndex</code> in the given string. 
      * @param str string to scan
-     * @param fromIndex index position from where to start
-     * @return position in string or -1 if no numeric found
+     *
+     * @return position in int. -1 for not found. 
      */ 
     public static int indexOfNumericInString(String str, int fromIndex) {
         if (str == null)  throw new IllegalArgumentException("String cannot be null.");
@@ -614,7 +590,7 @@ public class ERXStringUtilities {
      * a certain character. Useful for determining
      * if you need to add an '&' to the end of a
      * form value string.
-     * @param separator character to potentially
+     * @param separator character to add to potentially
      *		add to the StringBuffer.
      * @param not character to test if the given
      *		StringBuffer ends in it.
@@ -622,24 +598,6 @@ public class ERXStringUtilities {
      *		append to.
      */
     public static void appendSeparatorIfLastNot(char separator, char not, StringBuffer sb) {
-        if (sb.length() > 0 && sb.charAt(sb.length() - 1) != not)
-            sb.append(separator);
-    }
-
-    /**
-     * Utility method to append a character to a
-     * StringBuilder if the last character is not
-     * a certain character. Useful for determining
-     * if you need to add an '&' to the end of a
-     * form value string.
-     * @param separator character to potentially
-     *		add to the StringBuilder.
-     * @param not character to test if the given
-     *		StringBuilder ends in it.
-     * @param sb StringBuilder to test and potentially
-     *		append to.
-     */
-    public static void appendSeparatorIfLastNot(char separator, char not, StringBuilder sb) {
         if (sb.length() > 0 && sb.charAt(sb.length() - 1) != not)
             sb.append(separator);
     }
@@ -655,7 +613,7 @@ public class ERXStringUtilities {
         int begin, end;
         int oldLength = old.length();
         int length = buffer.length();
-        StringBuilder convertedString = new StringBuilder(length + 100);
+        StringBuffer convertedString = new StringBuffer(length + 100);
 
         begin = 0;
         while(begin < length)
@@ -694,7 +652,7 @@ public class ERXStringUtilities {
             final int sourceStringLength = sourceString.length();
             final int stringToReplaceLength = stringToReplace.length();
             final int replacementStringLength = replacementString.length();
-            final StringBuilder buffer = new StringBuilder(sourceStringLength - stringToReplaceLength + replacementStringLength);
+            final StringBuffer buffer = new StringBuffer(sourceStringLength - stringToReplaceLength + replacementStringLength);
             
             buffer.append(sourceString.substring(0, indexOfMatch));
             buffer.append(replacementString);
@@ -710,13 +668,11 @@ public class ERXStringUtilities {
     }    
 
     /**
-     * Removes the spaces in a given string.
-     * 
-     * @param aString string to remove spaces from
-     * @return string without spaces
+     * Removes the spaces in a given String
+     * @return string removing all spaces in it.
      */
-    public static String escapeSpace(String aString) {
-        NSArray<String> parts = NSArray.componentsSeparatedByString(aString, " ");
+    public static String escapeSpace(String aString){
+        NSArray parts = NSArray.componentsSeparatedByString(aString," ");
         return parts.componentsJoinedByString("");
     }
 
@@ -764,12 +720,12 @@ public class ERXStringUtilities {
 
     /**
      * String multiplication.
-     * @param n the number of times to concatenate a given string
-     * @param s string to be multiplied
+     * @param n the number of times to concatinate a given string
+     * @param s string to be multipled
      * @return multiplied string
      */
     public static String stringWithNtimesString(int n, String s) {
-    	StringBuilder sb = new StringBuilder(n);
+        StringBuffer sb=new StringBuffer();
         for (int i=0; i<n; i++) sb.append(s);
         return sb.toString();
     }
@@ -827,7 +783,7 @@ public class ERXStringUtilities {
     public static String escapeNonXMLChars(String str) {
         if (str == null) return null;
 
-        StringBuilder result = new StringBuilder(str.length());
+        StringBuffer result = new StringBuffer(str.length());
         for (int i = 0; i < str.length(); i++) {
         	char c = str.charAt(i);
         	switch(c) {
@@ -970,7 +926,7 @@ public class ERXStringUtilities {
     	String close = "]]>";
     	String escape = "]]]]><![CDATA[>";
 
-    	StringBuilder sb = new StringBuilder("<![CDATA[");
+    	StringBuffer sb = new StringBuffer("<![CDATA[");
     	
     	do {
         	end = pcdata.indexOf(close, start);
@@ -989,13 +945,14 @@ public class ERXStringUtilities {
         Character.UnicodeBlock block = Character.UnicodeBlock.of(c);
         if (block != null  &&  Character.UnicodeBlock.BASIC_LATIN.equals(block)) 
             return String.valueOf(c);
-        return toHexString(c);
+        else 
+            return toHexString(c);
     }
 
     public static String escapeNonBasicLatinChars(String str) {
         if (str == null) return null;
 
-        StringBuilder result = new StringBuilder(str.length());
+        StringBuffer result = new StringBuffer(str.length());
         for (int i = 0; i < str.length(); i++) 
             result.append(escapeNonBasicLatinChars(str.charAt(i)));
             
@@ -1031,7 +988,7 @@ public class ERXStringUtilities {
         targetString = null;
       }
       else {
-    	StringBuilder targetBuffer = null;
+        StringBuffer targetBuffer = null;
         int lastMatch = 0;
         int length = _sourceString.length();
         for (int sourceIndex = 0; sourceIndex < length; sourceIndex++) {
@@ -1044,7 +1001,7 @@ public class ERXStringUtilities {
           }
           if (escape) {
             if (targetBuffer == null) {
-              targetBuffer = new StringBuilder(length + 100);
+              targetBuffer = new StringBuffer(length + 100);
             }
             if (sourceIndex - lastMatch > 0) {
               targetBuffer.append(_sourceString.substring(lastMatch, sourceIndex));
@@ -1065,7 +1022,7 @@ public class ERXStringUtilities {
     }
 
     public static String toHexString(char c) {
-    	StringBuilder result = new StringBuilder("\u005C\u005Cu9999".length());
+        StringBuffer result = new StringBuffer("\u005C\u005Cu9999".length());
         String u = Long.toHexString((int) c).toUpperCase();
         switch (u.length()) {
             case 1:   result.append("\u005C\u005Cu000");  break;
@@ -1080,7 +1037,7 @@ public class ERXStringUtilities {
     public static String toHexString(String str) {
         if (str == null) return null;
 
-        StringBuilder result = new StringBuilder("\u005C\u005Cu9999".length() * str.length());
+        StringBuffer result = new StringBuffer("\u005C\u005Cu9999".length() * str.length());
         for (int i = 0; i < str.length(); i++) 
             result.append(toHexString(str.charAt(i)));
 
@@ -1094,7 +1051,7 @@ public class ERXStringUtilities {
      */
     public static String byteArrayToHexString(byte[] block) {
         int len = block.length;
-        StringBuilder buf = new StringBuilder(2 * len);
+        StringBuffer buf = new StringBuffer(2 * len);
         for (int i = 0; i < len; ++i) {
             int high = ((block[i] & 0xf0) >> 4);
             int low  =  (block[i] & 0x0f);
@@ -1105,10 +1062,8 @@ public class ERXStringUtilities {
     }
     
     /**
-     * Converts a even-length, hex-encoded String to a byte array.
-     * 
-     * @param hexString hex string to convert
-     * @return byte array of given hex string
+     * Converts a even-length, hex-encoded String to a byte array. 
+     * @param hexString
      */
     public static byte[] hexStringToByteArray(String hexString) {
     	int length = hexString.length();
@@ -1175,7 +1130,7 @@ public class ERXStringUtilities {
     public static String capitalize(String value) {
         String capital = null;
         if (value != null && value.length() > 0) {
-        	StringBuilder buffer = new StringBuilder(value);
+            StringBuffer buffer = new StringBuffer(value);
 
             buffer.setCharAt(0, Character.toUpperCase(value.charAt(0)));
             capital = buffer.toString();            
@@ -1193,7 +1148,7 @@ public class ERXStringUtilities {
         if (value != null) {
         	int length = value.length();
         	if (length > 0) {
-        		StringBuilder buffer = new StringBuilder(value);
+	            StringBuffer buffer = new StringBuffer(value);
 	            for (int i = 0; i < length; i ++) {
 	            	char ch = value.charAt(i);
 	            	if (i == 0 || i == length - 1 || (i < length - 1 && Character.isUpperCase(value.charAt(i + 1)))) {
@@ -1224,7 +1179,7 @@ public class ERXStringUtilities {
     public static String capitalizeAllWords(String value) {
         String capitalize = null;
         if (value != null && value.length() > 0) {
-        	StringBuilder buffer = new StringBuilder();
+            StringBuffer buffer = new StringBuffer();
             boolean first = true;
             for (StringTokenizer tokenizer = new StringTokenizer(value); tokenizer.hasMoreElements();) {
                 String token = tokenizer.nextToken();
@@ -1247,7 +1202,7 @@ public class ERXStringUtilities {
      * @return the StringWithoutUnderscores
      */
     public static String underscoreToCamelCase(String underscoreString, boolean capitalize) {
-    	StringBuilder camelCase = new StringBuilder();
+    	StringBuffer camelCase = new StringBuffer();
     	String[] underscoreStrings = underscoreString.split("_");
     	for (int i = 0; i < underscoreStrings.length; i ++) {
     		String word;
@@ -1263,14 +1218,12 @@ public class ERXStringUtilities {
     }
     
     /**
-     * Converts a string in camel case to an underscore representation.
-     * 
-     * @param camelString string to convert
-     * @param lowercase if all uppercase characters should be converted to lowercase
+     * Converts ThisIsATest to this_is_a_test
+     * @param camelString the StringWithCaps
      * @return the string_with_underscores
      */
     public static String camelCaseToUnderscore(String camelString, boolean lowercase) {
-    	StringBuilder underscore = new StringBuilder();
+    	StringBuffer underscore = new StringBuffer();
     	boolean lastCharacterWasWordBreak = false;
     	boolean lastCharacterWasCapital = false;
     	int length = camelString.length();
@@ -1528,32 +1481,29 @@ public class ERXStringUtilities {
     }
 
     /**
-     * Returns a string from the input stream using the default
-     * encoding.
-     * @param in stream to read
-     * @return string representation of the stream.
-     * @throws IOException if things go wrong
-     */
+         * Returns a string from the input stream using the default
+          * encoding.
+          * @param in stream to read
+          * @return string representation of the stream.
+      */
      public static String stringFromInputStream(InputStream in) throws IOException {
          return new String(ERXFileUtilities.bytesFromInputStream(in));
      }
 
      /**
       * Returns a string from the input stream using the default
-      * encoding.
-      * @param in stream to read
-      * @param encoding to be used, null will use the default
-      * @return string representation of the stream.
-      * @throws IOException if things go wrong
-      */
+       * encoding.
+       * @param in stream to read
+       * @param encoding to be used, null will use the default
+       * @return string representation of the stream.
+   */
      public static String stringFromInputStream(InputStream in, String encoding) throws IOException {
          return new String(ERXFileUtilities.bytesFromInputStream(in), encoding);
      }
 
   
-      /**
-       * Returns a String by invoking toString() on each object from the array. After each toString() call
-       * the separator is appended to the buffer.
+      /** Returns a String by invoking toString() on each object from the array. After each toString() call
+       * the separator is appended to the buffer
        * 
        * @param array an object array from which to get a nice String representation
        * @param separator a separator which is displayed between the objects toString() value
@@ -1561,7 +1511,7 @@ public class ERXStringUtilities {
        * @return a string representation from the array
        */
     public static String toString(Object[] array, String separator) {
-    	StringBuilder buf = new StringBuilder();
+          StringBuffer buf = new StringBuffer();
           for (int i = 0; i < array.length; i++) {
               Object o = array[i];
               buf.append(o.toString());
@@ -1571,10 +1521,7 @@ public class ERXStringUtilities {
       }
 
     /**
-     * Creates a readable debug string for some data types (dicts, arrays, adaptorOperations, databaseOperations).
-     * 
-     * @param object the object to dump
-     * @return string representation of the given object
+     * creates a readable debug string for some data types (dicts, arrays, adaptorOperations, databaseOperations)
      */
     public static String dumpObject(Object object) {
 		StringBuffer sb = new StringBuffer(4000);
@@ -1582,8 +1529,7 @@ public class ERXStringUtilities {
 		return sb.toString();
 	}
 
-	/**
-	 * Checks if any of the characters specified in characters is contained in the string
+	/** Checks if any of the characters specified in characters is contained in the string
 	 * specified by source.
 	 * 
 	 * @param source the String which might contain characters
@@ -1600,15 +1546,14 @@ public class ERXStringUtilities {
 		return false;
 	}
 
-	/**
-	 * Removes any character which is not in characters from the source string.
+	/** removes any character which is not in characters from the source string
 	 * 
 	 * @param source the string which will be modified
 	 * @param characters the characters that are allowed to be in source
 	 * @return a new string only with characters from the characters argument
 	 */
 	public static String removeExceptCharacters(String source, String characters) {
-		StringBuilder buf = new StringBuilder();
+		StringBuffer buf = new StringBuffer();
 		int l = source.length();
 		for (int i = 0; i < l; i++) {
 			char c = source.charAt(i);
@@ -1619,15 +1564,14 @@ public class ERXStringUtilities {
 		return buf.toString();
 	}
 	
-	/**
-	 * Removes any character which is in characters from the source string.
+	/** removes any character which is in characters from the source string
 	 * 
 	 * @param source the string which will be modified
 	 * @param characters the characters that are not allowed to be in source
 	 * @return a new string without any characters from the characters argument
 	 */
 	public static String removeCharacters(String source, String characters) {
-		StringBuilder buf = new StringBuilder();
+		StringBuffer buf = new StringBuffer();
 		int l = source.length();
 		for (int i = 0; i < l; i++) {
 			char c = source.charAt(i);
@@ -1943,9 +1887,9 @@ public class ERXStringUtilities {
 	public static String stringFromDictionary(NSDictionary dict) {
 		NSArray orderedKeys = dict.allKeys();
 		orderedKeys = ERXArrayUtilities.sortedArraySortedWithKey(orderedKeys, "toString.toLowerCase");
-		StringBuilder result = new StringBuilder();
+		StringBuffer result = new StringBuffer();
 		for (Enumeration keys = orderedKeys.objectEnumerator(); keys.hasMoreElements();) {
-			Object key = keys.nextElement();
+			Object key = (Object) keys.nextElement();
 			Object value = dict.objectForKey(key);
 			String stringValue = NSPropertyListSerialization.stringFromPropertyList(value);
 			String stringKey = NSPropertyListSerialization.stringFromPropertyList(key);
@@ -2008,12 +1952,12 @@ public class ERXStringUtilities {
      */
     public static String safeIdentifierName(String source, String prefix, char replacement)
     {
-    	StringBuilder b;
+    	StringBuffer b;
     	// Add prefix if source does not start with valid character
         if (source == null || source.length() == 0 || Character.isJavaIdentifierStart(source.charAt(0))) {
-            b = new StringBuilder(source);
+            b = new StringBuffer(source);
         } else {
-        	b = new StringBuilder(prefix);
+        	b = new StringBuffer(prefix);
         	b.append(source);
         }
     	
@@ -2146,7 +2090,7 @@ public class ERXStringUtilities {
     		return string;
     	}
     	
-    	StringBuilder buffer = new StringBuilder(string);
+        StringBuffer buffer = new StringBuffer(string);
         for (int i = string.length(); i < paddedLength; i++) {
             buffer.append(padChar);
         }
@@ -2168,7 +2112,7 @@ public class ERXStringUtilities {
     		return string;
     	}
     	
-    	StringBuilder buffer = new StringBuilder();
+        StringBuffer buffer = new StringBuffer();
         for (int i = string.length(); i < paddedLength; i++) {
             buffer.append(padChar);
         }
@@ -2193,7 +2137,7 @@ public class ERXStringUtilities {
     		result = contentToInsert;
     	}
     	else {
-			StringBuilder sb = new StringBuilder(destinationString.length() + contentToInsert.length());
+			StringBuffer sb = new StringBuffer(destinationString.length() + contentToInsert.length());
 			sb.append(destinationString.substring(0, insertOffset));
 			sb.append(contentToInsert);
 			sb.append(destinationString.substring(insertOffset));
@@ -2215,7 +2159,7 @@ public class ERXStringUtilities {
     }
     
     /**
-     * Removes line breaks and quotes the string if necessary
+     * Removes line breaks and quotes the string if neccessary
      * 
      * @param s
      * 
@@ -2270,7 +2214,7 @@ public class ERXStringUtilities {
 			throw new IllegalArgumentException("Neither the string nor the quote symbol are allowed to be null");
 		}
 
-		s = new StringBuilder().append(quoteSymbol).append(s).append(quoteSymbol).toString();
+		s = new StringBuffer().append(quoteSymbol).append(s).append(quoteSymbol).toString();
 		return s;
 	}
 	
@@ -2303,9 +2247,9 @@ public class ERXStringUtilities {
 	 * @return the string without HTML characters in it
 	 */
 	public static String stripHtml(String str, boolean convertChars) {
-		String stripped = str;
-		if (stripped != null) {
-			stripped = stripped.replaceAll("<[^>]*>", " ");
+ 		String stripped = str;
+ 		if (stripped != null) {
+ 			stripped = stripped.replaceAll("<[^>]*>", " ");
 			if(convertChars) {
 				stripped = stripped.replaceAll("\\s+", " ");
 				stripped = stripped.replaceAll("&#8217;", "'");
@@ -2319,16 +2263,16 @@ public class ERXStringUtilities {
 				stripped = stripped.replaceAll("&#174;", "(C)");
 				stripped = stripped.replaceAll("&#174;", "(R)");
 				stripped = stripped.replaceAll("&#8482;", "(TM)");
-				stripped = stripped.trim();
+			stripped = stripped.trim();
 			}
-		}
-		return stripped;
-	}
-	
+ 		}
+ 		return stripped;
+ 	}
+
+
 	/**
-	 * @deprecated use {@link #stripHtml(String, boolean)}
+	 * @deprecated  Replaced by stripHtml(str, false)
 	 */
-	@Deprecated
 	public static String stripHtml(String str) {
 		return stripHtml(str, false);
 	}
@@ -2599,69 +2543,6 @@ public class ERXStringUtilities {
 			sum += (i % 2 == parity) ? ((2 * tmp) / 10) + ((2 * tmp) % 10) : tmp;
 		}
 		return sum % 10 == 0;
-	}
-	
-	/**
-	* Returns a string trimmed about at the max lenght you define without truncating the last word and adding "..." (if necessary)
-	* 
-	* @param trimmingString the string you would like to trim
-	* @param maxLenght the max lenght you need
-	* @return the string trimmed
-	*/
-	public static String wordSafeTrimmedString(String trimmingString, int maxLenght) {
-		String cuttedString = trimmingString;
-		if ( ( trimmingString != null ) && ( trimmingString.length() > maxLenght ) ) {
-			trimmingString = stripHtml(trimmingString,false);
-			if( trimmingString.length() > maxLenght) {
-				int space = trimmingString.indexOf(" ",(maxLenght - 20));
-				try {
-					cuttedString = trimmingString.substring(0, space)+" ...";
-				} catch ( Exception e ) {
-					//GIVE UP
-				}
-			}
-		}
-		return cuttedString;
-	}
-
-	/**
-	 * <span class="en">
-	 * 	trim leading 0 from a (Number) String 
-	 *
-	 * 	@param str - the String
-	 * 
-	 * 	@return Result String
-	 * </span>
-	 * 
-	 * <span class="ja">
-	 * 	半角数字の前の0を取る処理。
-	 *
-	 * 	@param str - 処理対象の文字列
-	 * 
-	 * 	@return 処理済みの文字列
-	 * </span>
-	 */
-	@SuppressWarnings("javadoc")
-	public static String trimZeroInFrontOfNumbers(String str){
-		// 文字有無確認
-		if(stringIsNullOrEmpty(str)) 
-			return str;
-
-		// 不必要番号削除処理
-		int loopIdxMax =  str.length() -1;
-		StringBuilder retStr = new StringBuilder(loopIdxMax +1);
-		char targetChar;
-		boolean alladdFlg = false;
-		for(int loopIdx = 0; loopIdx < loopIdxMax; loopIdx++){
-			targetChar = str.charAt(loopIdx);
-			if(alladdFlg || ((targetChar >= '1') && (targetChar <= '9')) ){
-				retStr.append ( targetChar );	// 文字コードが0以外なら残りを全て保存
-				alladdFlg = true;
-			}
-		}
-		retStr.append (str.charAt(loopIdxMax));	// 最後のコードを追加
-
-		return retStr.toString();
 	}
 
 }
